Repair some spacings

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,8 +11,12 @@ html {
   border: solid red 1px;
 }
 
+.flex {
+  border: solid green 1px;
+}
+
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: Montserrat, Helvetica, sans-serif;
   line-height: 1.3;
   background-color: lightgray;
 }
@@ -30,6 +34,10 @@ h2 {
 h3 {
   font-size: 1.5em;
   font-weight: 700;
+}
+
+p {
+  font-family: Roboto, Helvetica, sans-serif;
 }
 
 button {
@@ -57,6 +65,20 @@ button {
   font-weight: 400;
 }
 
+/* Queries for font-size breakpoints */
+
+@media only screen and (max-width: 870px) {
+  body {
+    font-size: 0.75rem;
+  }
+}
+
+@media only screen and (max-width: 665px) {
+  .start-here {
+    font-size: 0.6rem;
+  }
+}
+
 /* Header */
 nav {
   justify-content: space-between;
@@ -64,7 +86,8 @@ nav {
   width: 100%;
   z-index: 5;
   height: 4rem;
-  background-color: white;
+  background-color: #e9dccd;
+  font-size: 1rem;
 }
 
 nav li {
@@ -96,7 +119,6 @@ ul {
   }
 
   .mobile ul {
-    flex-grow: 1;
     justify-content: space-around;
     margin-left: 3.5rem;
     padding-right: 0;
@@ -114,6 +136,7 @@ main {
 /* Banner - desktop size */
 .start-here {
   padding: 5em 1em 5em 0;
+  margin-bottom: 2em;
   justify-content: space-around;
   width: 40%;
   flex-shrink: 1;
@@ -121,7 +144,7 @@ main {
 
 .large-image {
   width: 60%;
-  margin: 2rem 1.5rem;
+  margin: 2em 1.5em;
   flex-shrink: 2;
 }
 
@@ -139,40 +162,29 @@ main {
   width: auto;
 }
 
-/* Banner -smaller versions */
 
-@media only screen and (max-width: 870px) {
-  .start-here {
-    font-size: 0.75rem;
-  }
-}
-
-@media only screen and (max-width: 665px) {
-  .start-here {
-    font-size: 0.6rem;
-  }
-}
 
 /* Info - Jumbotron */
 .jumbotron {
   width: 60%;
-  margin: 2rem 1.5rem;
+  margin: 2em 1.5em;
 }
 
 .jumbotron img {
   max-width: 100%;
   display: block;
-  margin-bottom: 2rem;
+  margin-bottom: 2em;
 }
 
 blockquote {
-  margin-top: 1.5rem;
+  margin-top: 1.5em;
 }
 
 /* Aside - applies to Info and Thesis sections */
 
 .aside-container {
   width: 40%;
+  margin-top: 2em;
 }
 
 aside img {
@@ -181,16 +193,17 @@ aside img {
 }
 
 .aside {
-  margin: 1rem;
+  margin: 0 1rem;
+  align-items: center;
 }
 
 .aside .image {
   width: 35%;
-  margin-right: 1rem;
+  margin-right: 1em;
 }
 
 .aside p {
-  margin-top: 0.5rem;
+  margin-top: 0.5em;
 }
 
 .aside-text {
@@ -203,7 +216,7 @@ aside img {
 
 .courses {
   flex-wrap: wrap;
-  margin: 0 4rem;
+  margin: 0 4em;
   border: solid red 1px;
 }
 
@@ -211,7 +224,7 @@ aside img {
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 250px;
-  margin: 1rem;
+  margin: 1em;
 }
 
 .course img {
@@ -219,7 +232,7 @@ aside img {
 }
 
 .course-text {
-  padding-top: 1rem;
+  padding-top: 1em;
 }
 
 h4 {
@@ -234,7 +247,7 @@ h4 {
 }
 
 .thesis .flex {
-  margin-bottom: 2rem;
+  margin: 1em 0 2em 0;
 }
 
 /* Footer */
